--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.AddStoryActivity">
+    tools:context=".ui.activity.AddStoryActivity">
 
     <TextView
         android:id="@+id/tv_addStory_desc1"
@@ -42,7 +42,6 @@
         app:layout_constraintTop_toBottomOf="@+id/add_Img">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ed_desc"
             android:layout_width="match_parent"
             android:layout_height="190dp"
             android:gravity="top|start" />
